--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -11,6 +11,7 @@ Flask-SQLAlchemy==3.1.1
 greenlet==3.0.1
 gunicorn==21.2.0
 hmmlearn==0.3.0
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 joblib==1.3.2
@@ -19,8 +20,10 @@ nltk==3.8.1
 numpy==1.26.2
 packaging==23.2
 platformdirs==3.11.0
+pluggy==1.4.0
 psycopg2==2.9.9
 pycparser==2.21
+pytest==8.0.0
 python-dotenv==1.0.0
 regex==2023.10.3
 scikit-learn==1.3.2
